# ncurses_dice

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  config.ini  dice_controller.cpp  dice_controller.h  dice_view.cpp  in.cpp  main.cpp  makefile  menuSnippet  ncurses.cbp  rollHistory  test.cpp
include/: DiceController.h  DiceModel.h  DiceRoll.h  NcursesMenu.h
src/: DiceController.cpp  DiceModel.cpp  DiceView.cpp
src/controller/: DiceController.cpp  DiceRoll.cpp
src/model/: DiceModel.cpp
src/view/: DiceView.cpp  NcursesMenu.cpp
test/: ModelTest.cpp
